--- a/style.css
+++ b/style.css
@@ -105,3 +105,42 @@ button {
   border-radius: 50%;
   box-shadow: 0 0 10px #0f0, 0 0 40px #0f0, 0 0 80px #0f0;
 }
+
+@media screen and (min-width: 1000px) {
+  .pokedex {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .pokedex__info {
+    width: 49.9%;
+  }
+
+  .pokedex__cover {
+    display: block;
+    background-color: #dd082f;
+    width: 49.9%;
+    height: 100%;
+    border-radius: 10px;
+    position: relative;
+  }
+
+  .pokedex__cover-picture {
+    display: block;
+    background-color: #000;
+    width: 55%;
+    height:27.5%;
+    position: absolute;
+    right: 0;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 65% 100%);
+  }
+
+  .pokedex__info--data p {
+    margin: 0.4rem 1rem;
+  }
+
+  button {
+    width: 2.3rem;
+    height: 2rem;
+  }
+}
