--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
 }
 
 .pokedex__info--picture {
+  background-color: #333;
   border-color: #b0b0b0;
   border-style: solid;
   border-width: 4px 4px 2px 4px;
@@ -67,8 +68,8 @@ img {
 
 .pokedex__info--data .name {
   text-align: center;
-  font-size: 1.75rem;
-  margin-bottom: 2rem;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
   text-transform: capitalize;
 }
 
@@ -110,6 +111,7 @@ button {
   .pokedex {
     display: flex;
     justify-content: space-between;
+    width: 50%;
   }
 
   .pokedex__info {
